# tree-sitter-perl

./: .eslintrc.cjs  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  copy-to-release  cpanfile  generate_intuit_keywords.pl  generate_keywords.pl  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter  tree-sitter-perl.pc  tree-sitter.json  unicode_ranges.pl
.github/workflows/: ci.yml  deep-check.yml  fuzzing.yml  keyword-table.yml  publish.yml  release.yml
benchmark/: .gitignore  README.md  corpus-sources.tsv  coverage-gaps.md  fetch-corpus.sh  run.sh
bindings/c/: tree-sitter-perl.pc.in
bindings/c/tree_sitter/: tree-sitter-perl.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_perl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPerlTests/: TreeSitterPerlTests.swift
docs/: recovery-brace-close.md
lib/: operators.js  primitives.js  unicode_ranges.js
queries/: fold.scm  folds.scm  highlights.scm  injections.scm  matchup.scm  textobjects.scm
src/: bsearch.c  bsearch.h  grammar.json  node-types.json  scanner.c  tsp_intuit_keywords.h  tsp_intuit_more.h  tsp_intuit_readline.h  tsp_keywords.h  tsp_unicode.h
test/c/: test_intuit_more.c
test/corpus/: Future::AsyncAwait  Object::Pad  autoquote  error_recovery  expressions  functions  heredocs  interpolation  literals  map-grep  operators  pod  regexp  sg-expressions.txt  simple  statements  subroutines  variables
test/highlight/: Future::AsyncAwait.pm  Object::Pad.pm  expressions.pm  functions.pm  interpolation.pm  literals.pm  map-grep.pm  operators.pm  regexp.pm  statements.pm  subroutines.pm  variables.pm
